# ap-e2024-pub

./: .gitignore  README.md  erlang.md  haskell-hints.md  haskell.md  shell.nix
a1/a1-handout/: a1.cabal  runtests.hs
a1/a1-handout/src/APL/: AST.hs  AST_Tests.hs  Eval.hs  Eval_Tests.hs
a2/a2-handout/: a2.cabal  runtests.hs
a2/a2-handout/src/APL/: AST.hs  Check.hs  Check_Tests.hs  Eval.hs  Eval_Tests.hs
a3/a3-handout/: a3.cabal  apl.hs  prog  runtests.hs
a3/a3-handout/src/APL/: Eval.hs  Parser.hs  Parser_Tests.hs
a5/a5-handout/: a5.cabal  apl.hs  runtests.hs
a5/a5-handout/src/APL/: Error.hs  Eval.hs  Parser.hs  Tests.hs
a6/: a6-handout.tar
a6/a6-handout/a6-handout/: a6.cabal  runtests.hs
a6/a6-handout/a6-handout/src/: SPC.hs  SPC_Tests.hs
assignments/: README.md
week1/: .#README.md  README.md
week1/handout/src/: APL.hs  APL_Tests.hs
week1/handout/src/APL/: AST.hs  Eval.hs  Eval_Tests.hs
week1/lec-thu/: Eq.hs  Functor.hs  Monoid.hs  Sequence.hs  ghci.txt
week1/solution/: apl.cabal  week1.cabal
week1/solution/src/: APL.hs  APL_Tests.hs
week1/solution/src/APL/: AST.hs  Eval.hs  Eval_Tests.hs
week2/: README.md
week2/handout/: tests.hs  week2.cabal
week2/handout/src/: APL.hs  APL_Tests.hs
week2/handout/src/APL/: AST.hs  Eval.hs  Eval_Tests.hs
week2/lec-thu/: MaybeState.hs  State.hs  ghci.txt
week2/lec-tue/: Maybe.hs  MaybeReader.hs  PreludeDefs.hs  Reader.hs  ghci.txt
week2/solution/: runtests.hs  week2.cabal
week2/solution/src/: APL.hs  APL_Tests.hs
week2/solution/src/APL/: AST.hs  Eval_Tests.hs
week3/: README.md
week3/handout/: myprog
week3/handout/src/APL/: AST.hs  Parser.hs  Parser_Tests.hs
week3/lec-thu/: MegaParsing.hs  Parsing.hs  lec-thu.cabal
week3/lec-tue/: Parsing.hs
week3/solution/: week3.cabal
week3/solution/src/APL/: Eval.hs  Parser.hs  Parser_Tests.hs
week4/: README.md
week4/handout/: InterpIO.hs  runtests.hs  week4.cabal
week4/handout/src/APL/: AST.hs  Eval.hs  InterpIO.hs  InterpPure.hs  Interp_Tests.hs  Monad.hs  Util.hs
week4/lec-thu/: Async.hs  IO.hs
week4/lec-tue/: Free.hs
week4/solution/: week4.cabal
week4/solution/src/APL/: Eval.hs  InterpIO.hs  InterpPure.hs  Interp_Tests.hs  Monad.hs
week5/: README.md
week5/handout/src/APL/: AST.hs  Tests.hs
week5/lec-thu/: Recursion.hs  lec-thu.cabal
week5/lec-tue/: Eq.hs  Generators.hs  QuickCheckDefs.hs
week5/solution/: a5.cabal
week5/solution/src/APL/: AST.hs  Check.hs  Eval.hs  Tests.hs
week6/: README.md
week6/handout/: runtests.hs  week6.cabal
week6/handout/src/: GenServer.hs  SPC.hs  SPC_Tests.hs
week6/handout/src/SPC/: Core.hs  Core_Tests.hs
week6/lec-tue/: Async.hs  Concurrency.hs  GenServer.hs  IncServer.hs
week6/solution/: week6.cabal
week6/solution/src/: SPC.hs  SPC_Tests.hs
week6/solution/src/SPC/: Core.hs  Core_Tests.hs
week7/: README.md
week7/lec-tue/: FreeConcurrency.hs
