cabal-version:      3.0
name:               a1
version:            1.0.0.0
build-type:         Simple

common common
    default-language: Haskell2010
    ghc-options: -Wall

library
    import: common
    hs-source-dirs: src
    build-depends:
        base
      , tasty
      , tasty-hunit
    exposed-modules:
        APL.AST
        APL.AST_Tests
        APL.Eval
        APL.Eval_Tests

test-suite a1-test
    import: common
    type: exitcode-stdio-1.0
    main-is: runtests.hs
    build-depends:
        base
      , tasty
      , a1

