cabal-version:      3.0
name:               week2
version:            1.0.0.0
build-type:         Simple

common common
    default-language: Haskell2010
    ghc-options: -Wall

library
    import: common
    hs-source-dirs: src
    build-depends:
        base
      , tasty
      , tasty-hunit
    exposed-modules:
        APL
        APL_Tests

test-suite a2-test
    import: common
    type: exitcode-stdio-1.0
    main-is: tests.hs
    build-depends:
        base
      , tasty
      , week2
