cabal-version:      3.0
name:               week4
version:            1.0.0.0
build-type:         Simple

common common
    default-language: Haskell2010
    ghc-options: -Wall

library
    import: common
    hs-source-dirs: src
    build-depends:
        base
      , tasty
      , tasty-hunit
      , process
      , directory
    exposed-modules:
        APL.AST
        APL.Eval
        APL.InterpPure
        APL.InterpIO
        APL.Interp_Tests
        APL.Monad
        APL.Util

test-suite week4-test
    import: common
    type: exitcode-stdio-1.0
    main-is: runtests.hs
    build-depends:
        base
      , tasty
      , week4
      , process
