cabal-version:      3.0
name:               week6
version:            1.0.0.0
build-type:         Simple

common common
    default-language: Haskell2010
    ghc-options: -Wall

library
    import: common
    hs-source-dirs: src
    build-depends:
        base
      , tasty
      , tasty-hunit
      , clock
    exposed-modules:
        SPC.Core
        SPC.Core_Tests
        GenServer

test-suite week6-tests
    import: common
    type: exitcode-stdio-1.0
    main-is: runtests.hs
    build-depends:
        base
      , tasty
      , week6
